--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "module": "ESNext",
+    "target": "ES6",
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
