--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/material": "^6.1.0",
+    "@next/font": "^14.2.11",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
+    "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.11"
+    "react-markdown": "^9.0.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.11"
-  }
+  },
+  "type": "module"
 }
